...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/campaingHeader"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/lg_campaignviewtop"
            android:animateLayoutChanges="true">

            <ImageView
...
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/text_brandName"
                    android:visibility="invisible" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/spinnerContainer"
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_gravity="start"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="15dp"
                android:gravity="start"
                android:visibility="invisible">

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/spinnerLang"
                    style="@style/Widget.AppCompat.DropDownItem.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginStart="0dp"
                    android:dropDownVerticalOffset="5dp"
...
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/text_medium" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/widgetContainerMain"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
...
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="#f33e6f"
                android:textSize="11sp"/>

            <RelativeLayout
                android:id="@+id/bottomButtonContainer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="bottom"
                android:layout_weight=".8"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone"
                android:animateLayoutChanges="true">

                <LinearLayout
                    android:id="@+id/btnContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:animateLayoutChanges="true"
                    android:gravity="center"
                    android:orientation="horizontal">
...
